Updated ignore to include not syncing executing files

--- a/.gitignore
+++ b/.gitignore
@@ -99,3 +99,8 @@ ENV/
 
 # mypy
 .mypy_cache/
+Showing-Copy1.ipynb
+Untitled.ipynb
+Untitled1.ipynb
+Untitled2.ipynb
+auto_ml_analytics_results_MEDV.csv
