--- a/.gitignore
+++ b/.gitignore
@@ -106,7 +106,7 @@ Untitled2.ipynb
 auto_ml_analytics_results_MEDV.csv
 
 # tex stuff
-.out
-.log
-.aux
-.toc
+main.out
+main.log
+main.aux
+main.toc
